[tool.poetry]
name = "readable"
version = "0.1.0"
description = ""
authors = ["Giovanni Elias  <giovanni.elias@flowe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
pdf2image = "^1.16.3"
opencv-python = "^4.8.0.74"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
